# caries-segmentation

./: .gitignore  Dockerfile  README.md  bendeguz_collected_datasets.md  config.toml  pyproject.toml
data/preprocessed/: data.csv
docs/typst/: main.typ  ref.bib
scripts/: build_and_run.sh  check_and_build.sh  compute_class_ratio.py  download.py  komondor_train.sbatch  preprocess.py  run_on_komondor.sh
src/: config.py  eval.py  train.py
src/data/: dataloader.py  dataset.py  lightning_datamodule.py
src/models/: __init__.py  lightning_model.py  unet.py
src/utils/: metrics.py
